force-app/main/default/objects/Retry_Job__c/Retry_Job__c.object-meta.xml
<CustomObject>
    <label>Retry Job</label>
    <nameField>
        <label>Retry Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retry Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>