force-app/main/default/objects/Retry_Job__c/fields/Has_failed__c.field-meta.xml
<CustomField>
    <fullName>Has_failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has failed</label>
    <type>Checkbox</type>
</CustomField>