force-app/main/default/objects/Retry_Job__c/fields/Items_synced__c.field-meta.xml
<CustomField>
    <fullName>Items_synced__c</fullName>
    <label>Items synced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>