force-app/main/default/objects/Retry_Job__c/fields/Items_to_Sync__c.field-meta.xml
<CustomField>
    <fullName>Items_to_Sync__c</fullName>
    <label>Items to sync</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>