force-app/main/default/objects/Retry_Job__c/fields/Sync_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Sync_Attempt__c</fullName>
    <label>Sync Attempt</label>
    <referenceTo>SyncAttempt__c</referenceTo>
    <relationshipLabel>Retry Jobs</relationshipLabel>
    <relationshipName>Retry_Jobs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>